# Tinkerflow-AI

./: .env.example  AI Emdpoints.md  API Keys  API_REFERENCE.md  ARCHITECTURE.md  Add SUPPORT.md  Build.sh  CHANGELOG.md  CHANGLOG.md  CODE-OF-COMDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configuration reference.md  Coverage.py  DEPLOYMENT.md  Different limits per key (future-proofing).ts  Dockerfile  Example  Example: gateway_client.py  GOVERANCE_FLOW.md  Goverance.md  How to use this test suite.py  Install.sh  Installation & setup.md  LICENSE  Landing Page.md  License MIT  Makefile.PHONY  Model Management.md  Ollama Setup  OllamaAI Jekyll starter  Ollama’s DNA file. Example  PRIVACY.md  Per-model rate limits.py  Phase 1: Expose metrics.py  Phase 2: Normalize metrics.py  Phase 3: Dead-simple dashboard (FastAPI + HTML).py  Project Structure  README.md  README_BASIC.md  (+32 more)
.github/: APP_MANIFEST.json  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  SECURITY_CONTACTS  events.yml  permissions.yml
.github/ISSUE_TEMPLATE/: bug_report.md
Docs/: README.md  ai-tutor.md  contributing.md  exporting-code.md  faq.md  getting-started.md  index.md  node-reference.md
Scripts/: Run sh  Self-test run.sh
app/: main.py  rate_limit.py
config/: Gateway.config.json  app.config.json  errors.map.json  logging.config.json  permissions.map.json  policies.config.json
gateway/: main.py  policies.py  requirements.txt  router.py
tests/: conftest.py  test_auth.py  test_config_validation.py  test_gateway.py  test_permissions.py  test_request_transformer.py  test_utils.py
(+41 files in other folders)
