pyproject.toml (alternative to setup.py)

```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinkerflow-ai"
version = "1.0.0"
description = "Deterministic governance engine for GitHub pull requests"
readme = "README.md"
authors = [{name = "Tinkerflow", email = "dev@tinkerflow.ai"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort", "coverage"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "gateway*"]
```
